--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         </div>
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Other</h4>
+            <h4 class="brown-text light">Discussion and Q & A Forums</h4>
             <div class="row text-center">
               <div class="col s4 m2">
                 <img alt="quora logo" src="static/img/quora.png" class="responsive-img">Quora</div>
